fix sticky modal z-index

--- a/src/features/Modals/StickyModal.css
+++ b/src/features/Modals/StickyModal.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 2000;
   background: linear-gradient(
     124deg,
     /* white */ rgba(255, 255, 255, 0.9),
